# FTDP-UI

./: .gitignore  CHANGELOG.md  COMPILATION_FIXES.md  LIVE_JOB_SCREEN.md  NAVIGATION_FIXES.md  PHASE_2_COMPLETE.md  README.md  dashboard-layouts.md  index.html  main.py  menu.py  package-lock.json  package.json  pyproject.toml  test_dataset.csv  upgrade-plan.md
docs/: API.md  PRODUCTION.md  SCREENS-DOCUMENTATION.md  SUCCESS_SCREEN.md  WORKFLOW.md
python-backend/: .env.example  main.py  mock_training_api.py  pyproject.toml  requirements.txt  resource_metrics_manual.csv  start-backend.bat  start-backend.py  start-backend.sh  start-simple.py  start.bat  start.py  training_monitor_api.py
python-backend/app/: __init__.py  config.py  dependencies.py  main.py
python-backend/app/api/v1/: datasets.py  health.py  jobs.py  metadata.py  models.py  training.py
python-backend/app/core/: error_handlers.py  exceptions.py  logging.py  models.py
python-backend/app/utils/: file_utils.py  validation.py
python-backend/data/: removed_resource_metrics.csv  training_losses.csv  training_metrics_manual.csv
python-backend/services/: dataset_selection.py  job_configuration.py  model_selection.py
src/: App.tsx  index.css
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  page_new.tsx  page_old.tsx
src/components/: CommonComponents.tsx  JobComponents.tsx  ThemeToggle.tsx  (+1 more)
test-scripts/: README.md  quick_start.py  start-services.ps1  start-services.sh  test_api_health.py  test_data_operations.py  test_e2e_workflow.py  test_invalid_dataset.csv  test_training_simulation.py
(+143 files in other folders)
