[project]
name = "ftdp-backend"
version = "0.1.0"
description = "FastAPI backend for Fine-Tuning Dashboard Platform"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pandas>=2.1.0",
    "huggingface_hub>=0.20.2",
    "python-multipart>=0.0.6",
    "websockets>=15.0.1",
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0"
]
